<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="dashboard">Dashboard</string>
  <string name="website">Website</string>
  <string name="my_website">My Website</string>
  <string name="my_clinic">My Clinic</string>
  <string name="boost_add_ons">Add-ons</string>
  <string name="customer">Customer</string>
  <string name="enquiry">Enquiries</string>
  <string name="my_enquiry">My Enquiries</string>
  <string name="patient">Patient</string>
  <string name="more">More</string>
  <string name="www_sravansclinic_com"><u>www.plastoindiaandpolymers.com</u></string>
  <string name="my_visiting_card">My visiting card</string>
  <string name="improve_your_score_to_90">Improve your score above <b>85%</b> for better online results.</string>
  <string name="share_on_whatsapp">Share on WhatsApp</string>
  <string name="share_on_more">Share on more…</string>
  <string name="digital_readiness_score">Website readiness score</string>
  <string name="digital_readiness_score_n">Website Readiness Score</string>
  <string name="quick_actions">Daily actions</string>
  <string name="use_tools_improve_business">Most frequently used actions to manage</string>
  <string name="one_tap_to_share_your_all_business_contact_points_with_anyone">One tap to share your all business contact points with anyone</string>
  <string name="ria_academy">Boost academy</string>
  <string name="learn_boost_360">Learn digital marketing and get better business results.</string>
  <string name="learn_how_boost_360_work">Learn how to make Boost 360 work for you</string>
  <string name="addon_marketplace_description">Buy Add-ons to make your website more powerful.</string>
  <string name="addon_marketplace_explore_tools">Explore tools that can help you run your business better</string>
  <string name="business_statistics">Business report</string>
  <string name="till_date">Till date</string>
  <string name="online_growth_stats">Online growth stats</string>
  <string name="manage_your_business">Engage your customers</string>
  <string name="manage_your_clinic">Connect with patients</string>
  <string name="manage_business_description">Access all activated features in your plan</string>
  <string name="manage_business_description_doc">View all Add-ons that help engage and interact with patients.</string>
  <string name="quick_action">Daily actions</string>
  <string name="show_all">Show all</string>
  <string name="missing_ndetails">Missing\nDetails</string>
  <string name="improve">Improve</string>
  <string name="my_products_catalog">My products catalog</string>
  <string name="all_boost_add_ons">All Boost Add-ons</string>
  <string name="tag_for_partners">.nowfloats.com</string>
  <string name="features_not_available">Feature not available</string>
  <string name="check_store_for_upgrade_info">Check the store for more information on upgrade plans</string>
  <string name="goto_store">Go to Store</string>
  <string name="cancel">Cancel</string>
  <string name="buydomain_percentage">10</string>
  <string name="phoneNumber_percentage">5</string>
  <string name="businessCategory_percentage">5</string>
  <string name="featuredImage_percentage">10</string>
  <string name="businessName_percentage">5</string>
  <string name="businessdescription_percentage">10</string>
  <string name="social_percentage">10</string>
  <string name="businessCategory">5</string>
  <string name="address_percentage">10</string>
  <string name="email_percentage">5</string>
  <string name="postUpdate_percentage">20</string>
  <string name="share_percentage">5</string>
  <string name="Logo_percentage">5</string>
  <string name="business_hours">5</string>
  <string name="add_owners_image" tools:ignore="ExtraTranslation">add owner image</string>
  <string name="add_missing_info_better_online_traction">Add missing info and improve your website readiness score above <b>%s</b> for better online traction.</string>
  <string name="site_completed">Site completed</string>
  <string name="your_site_health">Your site health</string>
  <string name="site_meter">Site Meter</string>
  <string name="dr_score">Website readiness score</string>
  <string name="navigation_data_error">Navigation data getting error!</string>
  <string name="quick_action_data_error">Quick action data getting error!</string>
  <string name="manage_business_not_found">Manage business data not found!</string>
  <string name="powered_by">Powered By</string>
  <string name="nowfloats">NowFloats</string>
  <string name="academy_banner_not_found">Academy banner not found.</string>
  <string name="add_on_marketplace_banner">Marketplace offers</string>
  <string name="perform_online_business">How your business has performed online</string>
  <string name="website_report_description">Learn how to make Boost 360 work for you</string>
  <string name="share_business_card">Share business card</string>
  <string name="website_pages_and_widgets">Website pages and widgets</string>
  <string name="for_better_engagement_and_traffic_desc">Update regularly for better engagement and traffic.</string>
  <string name="press_again_exit">Press again to exit</string>
  <string name="download_file_banner">Downloading the file...</string>
  <string name="opening_browser_banner">Opening in browser....</string>
  <string name="taking_video_banner">Taking you to the video....</string>
  <string name="open_now">Open now</string>
  <string name="close_now">Closed</string>
  <string name="business_timings">Business timings</string>
  <string name="contact_details">Contact details</string>
  <string name="business_address">Business address</string>
  <string name="retry">Retry</string>
  <string name="reset">Reset</string>
  <string name="select_duration">Select duration</string>
  <string name="digital_readiness_score_failed_to_load">Failed to load your Digital Readiness Score.</string>
  <string name="please_wait">Please wait...</string>
  <string name="business_nsummary">Business\nSummary</string>
  <string name="your_site_health_heading">Your site health: </string>
  <string name="_82">82%</string>
  <string name="new_content" translatable="false">New</string>
  <string name="inr">INR</string>
  <string name="indian_rupee">₹</string>
  <string name="_1_579">1,579</string>
  <string name="coming_soon">Coming soon...</string>
  <string name="my_business_card">My business card</string>
  <string name="video_consultation_analytics_coming_soon">Video Consultation analytics coming soon...</string>
  <string name="collection_analytics_coming_soon">Collection analytics coming soon...</string>
  <string name="business_card">Business Card</string>
  <string name="search_boost_add_ons">Search Boost Add-ons</string>
  <string name="your_website_readiness_reached_above_85">Your website readiness reached above 85%.</string>
  <string name="you_score_social_media_platforms">Check the new extended dashboard and share your website with all your contacts and on your social media accounts to bring initial traffic.</string>
  <string name="ready_welcome_new_customers">It’s time to promote your business website digitally.</string>
  <string name="find_website_readiness_score_from_here">Find website\nreadiness\nscore from\nhere</string>
  <string name="activate_now">Activate now</string>
  <string name="fb_page_sync_not_activated_yet">Fb page sync not\nactivated yet</string>
  <string name="fb_shop_sync_not_activated_yet">Fb shop sync not\nactivated yet</string>
  <string name="fb_twitter_sync_not_activated_yet">Twitter sync not\nactivated yet</string>
  <string name="fb_gmb_sync_not_activated_yet">GMB sync not\nactivated yet</string>
  <string name="total_twitter_followers">Total Twitter followers</string>
  <string name="total_fp_page_followers">Customers who interacted with your Facebook page</string>
  <string name="total_fp_shop_followers">Customers who interacted with your Facebook shop</string>
  <string name="total_gmb_followers">Customers who interacted with your GMB</string>
  <string name="social_media_promotion">Social media promotion</string>
  <string name="engaging_business_across_the_social_channels">See how your customers are engaging with your business across the social channels</string>
  <string name="no_enquiry_yet">No enquiry yet</string>
  <string name="promote_your_website_with_as_many_people_as_you_can">Promote your website with as many people as you can.</string>
  <string name="share_on_messanger">Share on messenger</string>
  <string name="share_on_instagram">Share on instagram</string>
  <string name="share_on_telegram">Share on telegram</string>
  <string name="share_on_email">Share on email</string>
  <string name="preview_your_website_by_clicking_the_link_below">Preview your website by clicking the link below.</string>
  <string name="customise_font">Customise font</string>
  <string name="primary_font">Primary font</string>
  <string name="secondary_font">Secondary font</string>
  <string name="default_theme_shade">Default</string>
  <string name="optional_shades_to_choose_from">Optional shades to choose from</string>
  <string name="open_sans">Open Sans</string>
  <string name="change_font_type">Change font type</string>
  <string name="the_font_you_want_to_change_as_primary">The font you want to change as primary.</string>
  <string name="the_font_you_want_to_change_as_secondary">The font you want to change as secondary.</string>
  <string name="changes_not_published">Changes not published!</string>
  <string name="you_have_unsaved_changes_on_this">You have unsaved changes on this page? Select if you want to save them or discard all the changes and exit this page?</string>
  <string name="publish_changes">Publish changes</string>
  <string name="discard_exit"><![CDATA[Discard & Exit]]></string>
  <string name="save_details">Save details</string>
  <string name="owner_s_description">Owner’s description</string>
  <string name="type_owner_s_description_in_around_2000_characters_at_max">Type owner’s description in around 2000 characters at max…</string>
  <string name="type_owner_s_designation_e_g_founder">Type owner’s designation. e.g. Founder</string>
  <string name="owner_s_name">Owner’s name*</string>
  <string name="type_the_owner_s_name">Type the owner’s name</string>
  <string name="owner_s_designation">Owner’s designation*</string>
  <string name="change_image">Change image</string>
  <string name="education">Education</string>
  <string name="doctors_education">Type doctor’s education</string>
  <string name="year_of_experience">Years of experience</string>
  <string name="select_years_of_experience">Select years of experience</string>
  <string name="mobile_number">Mobile number</string>
  <string name="enter_doctor_s_mobile_number">Enter doctor’s mobile number</string>
  <string name="memberships">Memberships</string>
  <string name="enter_doctors_membership">Enter doctor’s membership</string>
  <string name="registration">Registration</string>
  <string name="enter_doctor_s_registration">Enter doctor’s registration</string>
  <string name="allowed_appointment_type">Allowed appointment type</string>
  <string name="select_appointment_type">Select appointment type</string>
  <string name="add_profile_image">Add profile image*</string>
  <string name="take_photo">Take photo</string>
  <string name="upload_from_gallery">Upload from gallery</string>
  <string name="choose_profile_photo">Choose profile photo</string>
  <string name="xxxxxxxxxx">XXXXXXXXXX</string>
  <string name="save_amp_opt_in_for_updates"><![CDATA[Save & opt-in for updates]]></string>
  <string name="i_agree_to_receive_important_business_updates_from_boost_360_via_whatsapp">I agree to receive important business updates from Boost 360 via WhatsApp.</string>
  <string name="remove_whatsapp_number">Remove Whatsapp number</string>
  <string name="changing_whatsapp_number">Changing Whatsapp number?</string>
  <string name="your_whatsapp_number">Your WhatsApp number</string>
</resources>