<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data></data>

  <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.framework.views.customViews.CustomImageView
      android:id="@+id/riv_close_bottomSheet"
      android:layout_width="@dimen/size_40"
      android:layout_height="@dimen/size_40"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="@dimen/size_15"
      android:src="@drawable/ic_cross_grey_circle" />

    <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/bottoms_sheet_top20dp_white"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:padding="@dimen/size_20">

      <com.framework.views.customViews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changing_whatsapp_number"
        android:textColor="@color/black_4a4a4a"
        app:fontFamily="@font/bold"
        app:textType="HEADING_5" />


      <com.framework.views.customViews.CustomTextView
        android:id="@+id/customTextView7"
        style="@style/BusinessProfile_Text_Title"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/your_whatsapp_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <com.framework.views.customViews.PrefixEditText
        android:id="@+id/cet_business_name"
        style="@style/BusinessProfileTextField"
        android:digits="0123456789"
        android:drawableEnd="@null"
        android:hint="@string/xxxxxxxxxx"
        android:inputType="phone"
        app:textType="BODY_3"
        android:maxLength="10"
        android:tag="+91 " />

      <com.framework.views.customViews.CustomCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="@dimen/size_16"
        android:checked="false"
        android:text="@string/i_agree_to_receive_important_business_updates_from_boost_360_via_whatsapp"
        android:textColor="@color/psn_sub_heading_color"
        android:textSize="@dimen/body_1"
        app:buttonTint="@color/checkbox_background"
        app:layout_constraintTop_toBottomOf="@id/phone_et" />


      <com.framework.views.customViews.CustomButton
        android:id="@+id/btn_publish"
        style="@style/ButtonStyle.Rounded.Solid.BottomSheet"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/size_20"
        android:backgroundTint="@color/material_button_background_state"
        android:enabled="false"
        android:text="@string/save_amp_opt_in_for_updates"
        android:textColor="@color/white" />

      <com.framework.views.customViews.CustomCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/size_10"
        android:layout_marginStart="-4dp"
        android:layout_marginEnd="-4dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/size_1"
        android:layout_marginTop="@dimen/size_10">

        <com.framework.views.customViews.CustomButton
          android:id="@+id/btn_remove"
          style="@style/ButtonStyle.Rounded.Solid.BottomSheet"
          android:layout_width="match_parent"
          android:background="@color/white"
          android:text="@string/remove_whatsapp_number"
          android:textColor="@color/wrongOTPColor" />
      </com.framework.views.customViews.CustomCardView>


    </androidx.appcompat.widget.LinearLayoutCompat>

  </androidx.appcompat.widget.LinearLayoutCompat>

</layout>